[tool.poetry]
name = "proto-chain-client"
version = "0.1.0"
description = ""
authors = ["Platon Floria <platon.floria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
proto-chain = {path = "../python"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
