[package]
name = "toycoin"
version = "0.1.0"
edition = "2021"
authors = ["Platon Floria <platon.floria@gmail.com>"]

[dependencies]
axum = "0.5.16"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
indexmap = "1.9.1"
k256 = "0.11.4"
prost = "0.11.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.9"
tonic = "0.8.1"
triggered = "0.1.2"

[build-dependencies]
tonic-build = "0.8.0"
